--- a/index.html
+++ b/index.html
@@ -1,102 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jurassic Park Franchise</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jurassic Park Franchise</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <!-- Header -->
-  <header>
-    <div class="logo">Jurassic Park</div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Movies</a>
-      <a href="#">Series</a>
-      <a href="#">Spinoffs</a>
-      <a href="#">Media</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
+    <!-- Header Section -->
+    <header>
+        <div class="logo">Jurassic Park</div>
+        <nav class="nav-links">
+            <a href="#">Home</a>
+            <a href="#">Movies</a>
+            <a href="#">Series</a>
+            <a href="#">Spinoffs</a>
+            <a href="#">Media</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-content">
-      <h1>Jurassic Park Franchise</h1>
-      <p>A journey through the prehistoric thrills of Jurassic Park and beyond.</p>
-      <a href="#" class="btn-explore">Explore More</a>
-    </div>
-  </section>
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Jurassic Park Franchise and Spin-offs</h1>
+            <p>A journey through the prehistoric thrills of Jurassic Park and beyond.</p>
+            <a href="#overview" class="cta-button">Explore More</a>
+        </div>
+    </section>
 
-  <!-- Franchise Overview -->
-  <section class="overview">
-    <h2>The World of Jurassic Park</h2>
-    <div class="overview-content">
-      <img src="franchise-overview.jpg" alt="Franchise Overview">
-      <p>Discover the world of Jurassic Park, its impact on pop culture, and its lasting legacy...</p>
-    </div>
-  </section>
+    <!-- Franchise Overview Section -->
+    <section id="overview" class="section">
+        <h2>The World of Jurassic Park</h2>
+        <div class="overview-content">
+            <img src="franchise.jpg" alt="Jurassic Park Overview">
+            <p>Brief summary of the Jurassic Park series, its impact on pop culture, and legacy.</p>
+        </div>
+    </section>
 
-  <!-- Main Movies Section -->
-  <section class="main-movies">
-    <h2>Main Franchise Movies</h2>
-    <div class="movie-grid">
-      <div class="movie">
-        <img src="jp1.jpg" alt="Jurassic Park">
-        <p>Jurassic Park (1993)</p>
-      </div>
-      <div class="movie">
-        <img src="jp2.jpg" alt="The Lost World">
-        <p>The Lost World: Jurassic Park</p>
-      </div>
-      <div class="movie">
-        <img src="jp3.jpg" alt="Jurassic Park III">
-        <p>Jurassic Park III</p>
-      </div>
-      <div class="movie">
-        <img src="jw1.jpg" alt="Jurassic World">
-        <p>Jurassic World</p>
-      </div>
-    </div>
-  </section>
+    <!-- Main Movies Section -->
+    <section class="section">
+        <h2>Main Franchise Movies</h2>
+        <div class="movie-grid">
+            <div class="movie-item">
+                <img src="jp1993.jpg" alt="Jurassic Park">
+                <p>Jurassic Park (1993)</p>
+            </div>
+            <div class="movie-item">
+                <img src="lostworld.jpg" alt="The Lost World">
+                <p>The Lost World: Jurassic Park</p>
+            </div>
+            <div class="movie-item">
+                <img src="jp3.jpg" alt="Jurassic Park III">
+                <p>Jurassic Park III</p>
+            </div>
+            <div class="movie-item">
+                <img src="jurassicworld.jpg" alt="Jurassic World">
+                <p>Jurassic World</p>
+            </div>
+        </div>
+    </section>
 
-  <!-- Spinoff Series and Movies -->
-  <section class="spinoffs">
-    <h2>Spinoffs and Extended Universe</h2>
-    <div class="spinoff-grid">
-      <div class="spinoff">
-        <img src="camp-cretaceous.jpg" alt="Camp Cretaceous">
-        <p>Jurassic World: Camp Cretaceous (2020)</p>
-      </div>
-      <!-- Add more spinoff items as needed -->
-    </div>
-  </section>
+    <!-- Spinoff Series Section -->
+    <section class="section">
+        <h2>Spinoffs and Extended Universe</h2>
+        <div class="spinoff-grid">
+            <div class="spinoff-item">
+                <img src="campcretaceous.jpg" alt="Camp Cretaceous">
+                <p>Jurassic World: Camp Cretaceous (2020)</p>
+            </div>
+            <div class="spinoff-item">
+                <img src="otherspin.jpg" alt="Other Spinoff">
+                <p>Other Spinoffs</p>
+            </div>
+        </div>
+    </section>
 
-  <!-- Other Media -->
-  <section class="other-media">
-    <h2>Books, Games, and Beyond</h2>
-    <div class="media-grid">
-      <div class="media">
-        <img src="book.jpg" alt="Jurassic Park Novel">
-        <p>Jurassic Park Novel</p>
-      </div>
-      <div class="media">
-        <img src="game.jpg" alt="Jurassic World Game">
-        <p>Jurassic World Game</p>
-      </div>
-    </div>
-  </section>
+    <!-- Other Media Section -->
+    <section class="section">
+        <h2>Books, Games, and Beyond</h2>
+        <div class="media-grid">
+            <div class="media-item">
+                <img src="book.jpg" alt="Jurassic Park Novel">
+                <p>Jurassic Park Novel</p>
+            </div>
+            <div class="media-item">
+                <img src="game.jpg" alt="Jurassic World Game">
+                <p>Jurassic World Game</p>
+            </div>
+        </div>
+    </section>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2024 Jurassic Park Fan Site</p>
-    <div class="footer-links">
-      <a href="#">Privacy Policy</a> | 
-      <a href="#">Terms of Service</a>
-    </div>
-  </footer>
+    <!-- Footer Section -->
+    <footer>
+        <p>© 2024 Jurassic Park Franchise. All Rights Reserved.</p>
+        <div class="footer-links">
+            <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
+        </div>
+    </footer>
 
 </body>
 </html>
